--- a/src/app/moldeojs-view/moldeojs-view.component.css
+++ b/src/app/moldeojs-view/moldeojs-view.component.css
@@ -1,3 +1,13 @@
+#videocap {
+  display: none;
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  width: 320px;
+  height: 180px;
+  border: solid 1px white;
+}
+
 #webview_contenidos {
   display: block;
   position: absolute;
@@ -108,4 +118,15 @@
   top: 0px !important;
   position: fixed !important;
   display: block !important;
+}
+
+#moldeobuttons {
+  position: fixed;
+  display: block;
+  right: 15px;
+  top: 15px;
+  z-index: 10000;
+  background-color: rgba(0,0,0,0.22);
+  padding: 0px;
+  border-radius: 8px;
 }
