--- a/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/src/app/moldeojs-view/moldeojs-view.component.html
@@ -6,20 +6,30 @@
   <span>{{overlayer}}</span>
 </div>
 
-  <div id="moldeobuttons" #moldeobuttons class="btn-group moldeo_control" role="group" aria-label="..." style="position: fixed; display: block; right: 160px; top: 10px; z-index: 10000;">
-    <button id="sample_0" type="button" class="btn btn-default" (click)="loadsample($event,0);"><span class="glyphicon glyphicon-record" style="color: red;font-size: 30px;" aria-hidden="false"></span></button>
-    <button id="sample_1" type="button" class="btn btn-default" (click)="loadsample($event,1);"><span class="glyphicon glyphicon-record" style="color: green;font-size: 30px;" aria-hidden="false"></span></button>
-    <button id="sample_2" type="button" class="btn btn-default" (click)="loadsample($event,2);"><span class="glyphicon glyphicon-record" style="color: blue;font-size: 30px;" aria-hidden="false"></span></button>
-    <button id="sample_3" type="button" class="btn btn-default" (click)="loadsample($event,3);"><span class="glyphicon glyphicon-record" style="color: yellow;font-size: 30px;" aria-hidden="false"></span></button>
+<div id="moldeobuttons" #moldeobuttons class="btn-group moldeo_control" role="group" aria-label="..." data-html2canvas-ignore>
+  <!--button id="sample_0" type="button" class="btn btn-default" (click)="loadsample($event,0);"><span class="glyphicon glyphicon-record" style="color: red;font-size: 30px;" aria-hidden="false"></span></button>
+  <button id="sample_1" type="button" class="btn btn-default" (click)="loadsample($event,1);"><span class="glyphicon glyphicon-record" style="color: green;font-size: 30px;" aria-hidden="false"></span></button>
+  <button id="sample_2" type="button" class="btn btn-default" (click)="loadsample($event,2);"><span class="glyphicon glyphicon-record" style="color: blue;font-size: 30px;" aria-hidden="false"></span></button>
+  <button id="sample_3" type="button" class="btn btn-default" (click)="loadsample($event,3);"><span class="glyphicon glyphicon-record" style="color: yellow;font-size: 30px;" aria-hidden="false"></span></button-->
+  <button id="sample_4" type="button" class="btn btn-default" data-toggle="tooltip" placement="bottom" tooltip="Viajar, elegir una ubicación" title="Viajar, elegir una ubicación" (click)="hide();"><fa-icon [icon]="['fas', 'globe-americas']"></fa-icon></button>
+  <button id="screenshot" type="button" class="btn btn-default" placement="bottom" tooltip="Capturar un cuadro" title="Capturar un cuadro" (click)="screenshot();"><fa-icon [icon]="['fas', 'camera']"></fa-icon></button>
+  <button id="screencapture" type="button" class="btn btn-default" placement="bottom" tooltip="Capturar un cuadro usando video (seleccione esta ventana, luego de unos 8 segundos se captura el cuadro.)" title="Capturar un cuadro usando video (seleccione esta ventana, luego de unos 8 segundos se captura el cuadro.)" (click)="startscreencapture();"><fa-icon [icon]="['fas', 'video']"></fa-icon></button>
 
-    <button type="button" class="btn btn-default" (click)="stop();"><span class="glyphicon glyphicon-stop" aria-hidden="false"></span></button>
-    <button type="button" class="btn btn-default" (click)="play();"><span class="glyphicon glyphicon-play" aria-hidden="false"></span></button>
-    <button type="button" class="btn btn-default" (click)="fullscreen();"><span class="glyphicon glyphicon-fullscreen" aria-hidden="false"></span></button>
-    <!--button type="button" class="btn btn-default" (click)="pause();"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button-->
-    <button type="button" id="audioonoff" class="btn btn-default" (click)="audioonoff();"><span #audioonoff_ico class="glyphicon glyphicon-volume-off" aria-hidden="false"></span></button>
-  </div>
 
-  <div id="webview_contenidos" #webview_contenidos class="contenido_over_hide">
-    <div id="webview_titulo" #webview_titulo class="titulo">MOLDEO@JS {{mititulo}}</div>
-    <div id="webview_descripcion" #webview_descripcion class="descripcion">{{midescripcion}}</div>
-  </div>
+  <!--button type="button" class="btn btn-default" (click)="stop();"><span class="glyphicon glyphicon-stop" aria-hidden="false"></span></button>
+  <button type="button" class="btn btn-default" (click)="play();"><span class="glyphicon glyphicon-play" aria-hidden="false"></span></button-->
+  <button type="button" class="btn btn-default" title="Pantalla Completa, (ESC para salir)" (click)="fullscreen();"><span class="glyphicon glyphicon-fullscreen" aria-hidden="false"></span></button>
+  <!--button type="button" class="btn btn-default" (click)="pause();"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button-->
+  <button type="button" id="audioonoff" class="btn btn-default" title="On/Off Audio" (click)="audioonoff();"><span #audioonoff_ico class="glyphicon glyphicon-volume-off" aria-hidden="false"></span></button>
+  <button id="help" type="button" class="btn btn-default" title="Help" (click)="showhelp()"
+          placement="bottom" tooltip="Mostrar instrucciones"
+          popoverx="Ud se encuentra a punto de atravesar el umbral cuántico - donde los átomos se transforman en bits y los cuerpos se “desmaterializan”- lo cual hace posible la teletransportacion."
+          popoverTitlex="AIT Instrucciones para la teletransportacion"
+        ><fa-icon [icon]="['fas', 'info']"></fa-icon></button>
+</div>
+<!--video id="videocap"></video-->
+
+<div id="webview_contenidos" #webview_contenidos class="contenido_over_hide" data-html2canvas-ignore>
+  <div id="webview_titulo" #webview_titulo class="titulo">MOLDEO@JS {{mititulo}}</div>
+  <div id="webview_descripcion" #webview_descripcion class="descripcion">{{midescripcion}}</div>
+</div>
