--- a/src/app/moldeojs-interface/moldeojs-interface.component.html
+++ b/src/app/moldeojs-interface/moldeojs-interface.component.html
@@ -18,6 +18,6 @@
 <header class="moHeader" (mouseenter)="moToolDisplay=false;">
   <div class="moldeoicon"></div>
   <div class="moldeofile">{{moFileName}}</div>
-  <button class="moldeobutton" (click)="showmoView();" type="button" name="moButton" title="Moldeojs View">moView</button>
+  <button class="moldeobutton" (click)="showmoView();" type="button" name="moButton" title="Moldeojs View">Edit</button>
   <button class="moldeobutton" type="button" name="auto" title="Auto Layout" (click)="autoLayout()">auto</button>
 </header>
