--- a/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/src/app/moldeojs-view/moldeojs-view.component.html
@@ -11,21 +11,21 @@
   <button id="sample_1" type="button" class="btn btn-default" (click)="loadsample($event,1);"><span class="glyphicon glyphicon-record" style="color: green;font-size: 30px;" aria-hidden="false"></span></button>
   <button id="sample_2" type="button" class="btn btn-default" (click)="loadsample($event,2);"><span class="glyphicon glyphicon-record" style="color: blue;font-size: 30px;" aria-hidden="false"></span></button>
   <button id="sample_3" type="button" class="btn btn-default" (click)="loadsample($event,3);"><span class="glyphicon glyphicon-record" style="color: yellow;font-size: 30px;" aria-hidden="false"></span></button-->
-  <button id="sample_4" type="button" class="btn btn-default" data-toggle="tooltip" placement="bottom" tooltip="Viajar, elegir una ubicación" title="Viajar, elegir una ubicación" (click)="hide();"><fa-icon [icon]="['fas', 'globe-americas']"></fa-icon></button>
+  <!--button id="sample_4" type="button" class="btn btn-default" data-toggle="tooltip" placement="bottom" tooltip="Viajar, elegir una ubicación" title="Viajar, elegir una ubicación" (click)="hide();"><fa-icon [icon]="['fas', 'globe-americas']"></fa-icon></button-->
   <button id="screenshot" type="button" class="btn btn-default" placement="bottom" tooltip="Capturar un cuadro" title="Capturar un cuadro" (click)="screenshot();"><fa-icon [icon]="['fas', 'camera']"></fa-icon></button>
   <button id="screencapture" type="button" class="btn btn-default" placement="bottom" tooltip="Capturar un cuadro usando video (seleccione esta ventana, luego de unos 8 segundos se captura el cuadro.)" title="Capturar un cuadro usando video (seleccione esta ventana, luego de unos 8 segundos se captura el cuadro.)" (click)="startscreencapture();"><fa-icon [icon]="['fas', 'video']"></fa-icon></button>
 
 
-  <!--button type="button" class="btn btn-default" (click)="stop();"><span class="glyphicon glyphicon-stop" aria-hidden="false"></span></button>
-  <button type="button" class="btn btn-default" (click)="play();"><span class="glyphicon glyphicon-play" aria-hidden="false"></span></button-->
+  <button type="button" class="btn btn-default" (click)="stop();"><span class="glyphicon glyphicon-stop" aria-hidden="false"></span></button>
+  <button type="button" class="btn btn-default" (click)="play();"><span class="glyphicon glyphicon-play" aria-hidden="false"></span></button>
   <button type="button" class="btn btn-default" title="Pantalla Completa, (ESC para salir)" (click)="fullscreen();"><span class="glyphicon glyphicon-fullscreen" aria-hidden="false"></span></button>
   <!--button type="button" class="btn btn-default" (click)="pause();"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button-->
-  <button type="button" id="audioonoff" class="btn btn-default" title="On/Off Audio" (click)="audioonoff();"><span #audioonoff_ico class="glyphicon glyphicon-volume-off" aria-hidden="false"></span></button>
-  <button id="help" type="button" class="btn btn-default" title="Help" (click)="showhelp()"
+  <!--button type="button" id="audioonoff" class="btn btn-default" title="On/Off Audio" (click)="audioonoff();"><span #audioonoff_ico class="glyphicon glyphicon-volume-off" aria-hidden="false"></span></button-->
+  <!--button id="help" type="button" class="btn btn-default" title="Help" (click)="showhelp()"
           placement="bottom" tooltip="Mostrar instrucciones"
           popoverx="Ud se encuentra a punto de atravesar el umbral cuántico - donde los átomos se transforman en bits y los cuerpos se “desmaterializan”- lo cual hace posible la teletransportacion."
           popoverTitlex="AIT Instrucciones para la teletransportacion"
-        ><fa-icon [icon]="['fas', 'info']"></fa-icon></button>
+        ><fa-icon [icon]="['fas', 'info']"></fa-icon></button-->
 </div>
 <!--video id="videocap"></video-->
 
